# phi_numeral_system_library

./: PhiBase.py  PhiNumber.py  README.md  main.py  pyproject.toml  test_PhiBase.py  test_PhiNumber.py  tests.py
