[project]
name = "phi-numeral-system-library"
version = "0.1.0"
description = "Библиотека для работы с числами в фи-еричной системе счисления (система Бергмана)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Laptev Pavel" },
    { name = "Aosu" },
]
dependencies = []
 
[dependency-groups]
dev = [
    "pytest>=8.0",
]
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
only-include = ["PhiNumber.py", "PhiBase.py"]
 
[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
 